docs/tests/syntax/bad/testfile-for7-1.cpp
void m() { int i; for() ; }
